Polygon function + changes in logic

--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
                                 <input class="hidden" type="radio" name="tools" value="Circle" autocomplete="off"> Circle
                             </label>
                             <label class="btn btn-secondary">
-                                <input class="hidden" type="radio" name="tools" value="Eraser" id="option3" autocomplete="off"> Eraser
+                                <input class="hidden" type="radio" name="tools" value="Polygon" autocomplete="off"> Polygon
                             </label>
+                            <label class="btn btn-secondary">
+                                <input class="hidden" type="radio" name="tools" value="Eraser" id="option3" autocomplete="off"> Eraser
+                            </label>      
                         </div>
                     </div>
                 </div>
 
+                <div class="row justify-content-center align-items-end" style="margin-top: 8px">
+                    <div class="col-auto">
+                        <button id="btn-confirm" class="btn btn-danger">Confirm</button>
+                    </div>
+                </div>
                 <div class="row justify-content-center align-items-end" style="margin-top: 8px">
                     <div class="col-auto">
                         <button id="btn-clear" class="btn btn-danger">Clear</button>
