--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
         <link rel="stylesheet" href="style.css">
+        <script src="https://unpkg.com/mathjs@10.1.0/lib/browser/math.js"></script>
         <title>a</title>
     </head>
 
@@ -15,39 +16,32 @@
     <div class="container">
         <div class="row">
             <div class="col-auto" id="btn-bar">
-                <div class="row">
-                    <div class="col-auto">
-                        <div class="btn-group-vertical " data-toggle="buttons">
-                            <label class="btn btn-secondary active">
-                                <input class="hidden" type="radio" name="tools" value="Pixel" autocomplete="off" checked> Pixel
-                            </label>
-                            <label class="btn btn-secondary">
-                                <input class="hidden" type="radio" name="tools" value="Line" autocomplete="off"> Line
-                            </label>
-                            <label class="btn btn-secondary">
-                                <input class="hidden" type="radio" name="tools" value="Circle" autocomplete="off"> Circle
-                            </label>
-                            <label class="btn btn-secondary">
-                                <input class="hidden" type="radio" name="tools" value="Polygon" autocomplete="off"> Polygon
-                            </label>
-                            <label class="btn btn-secondary">
-                                <input class="hidden" type="radio" name="tools" value="Eraser" id="option3" autocomplete="off"> Eraser
-                            </label>      
-                        </div>
+                <div class="col-auto">
+                    <div class="btn-group-vertical" data-toggle="buttons">
+                        <label class="btn btn-secondary active">
+                            <input class="hidden" type="radio" name="tools" value="Pixel" autocomplete="off" checked> Pixel
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Line" autocomplete="off"> Line
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Circle" autocomplete="off"> Circle
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Polygon" autocomplete="off"> Polygon
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Curve" autocomplete="off"> Curve
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Eraser"  autocomplete="off"> Eraser
+                        </label>
                     </div>
                 </div>
-
-                <div class="row justify-content-center align-items-end" style="margin-top: 8px">
-                    <div class="col-auto">
-                        <button id="btn-confirm" class="btn btn-danger">Confirm</button>
-                    </div>
+                <div class="btn-group-vertical" style="margin-top: 16px">
+                    <button id="btn-confirm" class="btn btn-danger">Confirm</button>
+                    <button id="btn-clear" class="btn btn-danger">Clear</button>
                 </div>
-                <div class="row justify-content-center align-items-end" style="margin-top: 8px">
-                    <div class="col-auto">
-                        <button id="btn-clear" class="btn btn-danger">Clear</button>
-                    </div>
-                </div>
-
             </div>
             <div class="col">
                 <div class="row justify-content-center">
