add functions: Scanline and Replace
coloquei algumas funções a mais pra ajudar na scanline e replace. ainda falta colocar as funções pro circulo

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
                             <input class="hidden" type="radio" name="tools" value="Curve" autocomplete="off"> Curve
                         </label>
                         <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Scanline" autocomplete="off"> Scanline
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Replace" autocomplete="off"> Replace
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Resize" autocomplete="off"> Resize
+                        </label>
+                        <label class="btn btn-secondary">
                             <input class="hidden" type="radio" name="tools" value="Eraser"  autocomplete="off"> Eraser
                         </label>
                     </div>
