feat: adds boundaryFill

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                             <input class="hidden" type="radio" name="tools" value="Resize" autocomplete="off"> Resize
                         </label>
                         <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Boundary"  autocomplete="off"> Boundary
+                        </label>
+                        <label class="btn btn-secondary">
                             <input class="hidden" type="radio" name="tools" value="Eraser"  autocomplete="off"> Eraser
                         </label>
                     </div>
