--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
     <body>
     <h1 class="display-1">8bitArt</h1>
+    <div class="row">
+        <div class="col-auto">
+            <label class="form-label">Escala X</label>
+            <input type="range" id="xScale" class="form-range" min="1" max="10" step="1" value="2">
+        </div>
+        <div class="col-auto">
+            <label class="form-label">Escala Y</label>
+            <input type="range" id="yScale" class="form-range" min="1" max="10" step="1" value="2">
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-auto" id="btn-bar">
@@ -46,11 +56,14 @@
                             <input class="hidden" type="radio" name="tools" value="Boundary"  autocomplete="off"> Boundary
                         </label>
                         <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="Scale"  autocomplete="off"> Scale
+                        </label>
+                        <label class="btn btn-secondary">
                             <input class="hidden" type="radio" name="tools" value="Eraser"  autocomplete="off"> Eraser
                         </label>
                     </div>
                 </div>
-                <div class="btn-group-vertical" style="margin-top: 16px">
+                <div class="btn-group-vertical" style="margin-top: 16px;width: 100%">
                     <button id="btn-confirm" class="btn btn-danger">Confirm</button>
                     <button id="btn-clear" class="btn btn-danger">Clear</button>
                 </div>
