--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                             <input class="hidden" type="radio" name="tools" value="Scale"  autocomplete="off"> Scale
                         </label>
                         <label class="btn btn-secondary">
+                            <input class="hidden" type="radio" name="tools" value="LineCrop"  autocomplete="off"> LineCrop
+                        </label>
+                        <label class="btn btn-secondary">
                             <input class="hidden" type="radio" name="tools" value="Eraser"  autocomplete="off"> Eraser
                         </label>
                     </div>
